--- a/04-gif-expert-app/src/index.css
+++ b/04-gif-expert-app/src/index.css
@@ -1,5 +1,6 @@
 * {
   font-family: Helvetica, arial, sans-serif;
+  background-color: rgb(39, 39, 39);
 }
 
 body {
@@ -7,7 +8,46 @@ body {
 }
 
 input {
-  color: grey;
+  background-color: #fafafa;
+  color: #000000;
   font-size: 1.2rem;
   width: 100%;
+}
+
+h2,
+p,
+.category {
+  color: #fafafa;
+  text-align: center;
+}
+
+h2 {
+  font-size: 4rem;
+}
+span {
+  color: rgb(0, 217, 255);
+}
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card {
+  align-content: center;
+  border: 1px solid #fafafa;
+  border-radius: 6px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+}
+
+.card p {
+  color: #fafafa;
+  padding: 5px;
+  text-align: center;
+}
+
+card img {
+  width: 20px;
 }
